Increase goal spacing to fix overlapping issue

--- a/css/showcase.css
+++ b/css/showcase.css
@@ -1,7 +1,7 @@
 .goal {
     float: left;
     width: 400px;
-    height: 300px;
+    height: 370px;
     margin-bottom: 50px;
 }
 
